--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
   <title>Ayesha Eman - CV</title>
 </head>
-<body style="text-align:center; margin-top:50px;">
+<body style="text-align:center; margin-top:50px; font-family: Arial;">
   <h2>Ayesha Eman - CV</h2>
-  <iframe src="ayeshaeman.pdf" width="80%" height="800px" style="border:none;"></iframe>
-  <p>If the CV doesn’t load, <a href="ayeshaeman.pdf" target="_blank">click here to download</a>.</p>
+  <iframe src="AyeshaEman.pdf" width="80%" height="800px" style="border:none;"></iframe>
+  <p>If the CV doesn’t load, <a href="AyeshaEman.pdf" target="_blank">click here to download</a>.</p>
 </body>
 </html>
